...
      >
        <View style={styles.buttonStack}>
          <Button
            title="Focus"
            onPress={editor.handleFocus}
            style={styles.button}
            testID="focus-button"
          />
          <Button
            title="Blur"
            onPress={editor.handleBlur}
            style={styles.button}
            testID="blur-button"
          />
          <Button
            title="Clear"
            onPress={editor.handleClear}
            style={styles.button}
            testID="clear-button"
          />
          <Button
            title={sizeMode === 'max' ? 'Base' : 'Max'}
            onPress={() => setSizeMode(sizeMode === 'max' ? 'base' : 'max')}
            style={styles.button}
            testID="size-max-button"
          />
        </View>
        <View style={styles.editor} testID="editor-container">
          <EnrichedTextInput
            ref={editor.ref}
            mentionIndicators={['@', '#']}
...
              editor.handleSubmitEditingEvent(e.nativeEvent)
            }
            androidExperimentalSynchronousEvents={
              ANDROID_EXPERIMENTAL_SYNCHRONOUS_EVENTS
            }
            onPasteImages={(e) => editor.handlePasteImagesEvent(e.nativeEvent)}
            testID="editor-input"
          />
          <Toolbar
            stylesState={editor.stylesState}
            editorRef={editor.ref}
            onOpenLinkModal={editor.openLinkModal}
            onSelectImage={editor.openImageModal}
...
            testID="set-value-button"
          />
          <Button
            title="Dev Screen"
            onPress={onSwitch}
            style={styles.rowButton}
            testID="toggle-screen-button"
          />
        </View>
        <View style={styles.buttonRow}>
          <Button
            title="Enriched Text Screen"
            onPress={onSwitchEnrichedText}
            style={styles.rowButton}
            testID="toggle-enriched-text-screen-button"
          />
        </View>
      </ScrollView>
      <LinkModal
        avoidKeyboard
        isOpen={editor.isLinkModalOpen}
...
