appId: swmansion.enriched.example
---
# Visually validates rendering of all list types
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-ordered-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "First"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Second"
- pressKey: Enter
- tapOn:
    id: "toolbar-ordered-list"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Normal"
- pressKey: Enter

- tapOn:
    id: "toolbar-unordered-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "First"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Second"
- pressKey: Enter
- tapOn:
    id: "toolbar-unordered-list"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Normal"
- pressKey: Enter

- tapOn:
    id: "toolbar-checkbox-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "First"
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Second"

- tapOn:
    id: "size-max-button"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "paragraph_styles_lists"
