appId: swmansion.enriched.example
# Tests basic scrollability
---
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line one'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line two'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line three'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line four'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line five'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line six'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line seven'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line eight'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line nine'
- pressKey: Enter
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Line ten'

- swipe:
    from:
      id: 'editor-input'
    direction: DOWN

- waitForAnimationToEnd

# Force a delay to ensure the scrollbar is invisible
- extendedWaitUntil:
    visible: 'fake_element_to_force_delay'
    optional: true
    timeout: 200

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'scroll_after_typing_long_content_top'

- tapOn:
    id: 'editor-input'
    point: '0%,0%'

- swipe:
    from:
      id: 'editor-input'
    direction: UP

- waitForAnimationToEnd

- tapOn:
    id: 'blur-button'
- waitForAnimationToEnd

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'scroll_after_typing_long_content_bottom'
